--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint-config-prettier": "^10.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-transition-group": "^4.4.5",
     "sonner": "^1.5.0"
   },
   "devDependencies": {
